# GPT.research-

./: Dockerfile  LICENSE  README.md  app.py  bundle_senderos.py  docker-compose.yml  mempool_connectoros.py  package.json  requirements-membra.txt  requirements.txt  vercel.json
.github/workflows/: research-infra-ci.yml
chat_summary_llm_app/: app.py
config/: endpoints.yaml  settings.py
contracts/: KPIFactory.sol
data/: real_experiment.csv
docs/: DEMO_1000_FILE_APPRAISAL.md  MEMBRA_DOCUMENTARY_HANDOFF.md  RESEARCH_VALUE_GRAPH.md  dual_force_liquidity_ecology.md
docs/chats/: membra-priceos-bundle-senderos-chat-2026-05-20.md
docs/membra/: README.md  app-file-price-ledger.md  overandor-control-gate-map.md  overandor-evidence-ledger-template.md  overandor-investor-auditor-memo.md  overandor-safety-propagation-appendix.md  (+3 more)
examples/: membra_1000_file_values.py
multi_platform_poster_stripe/: .env.example  README.md  SECURITY.md  app.py  posts.example.jsonl  stripe_webhook.py
paper2endpoint_unique_api/: PRODUCT_THESIS.md  README.md  app.py
public/: index.html
scripts/: backup_archives.sh  deploy.sh  health_check.sh
src/membra/: CMakeLists.txt  Cargo.toml  README.md  overandor_control_plane.py  overandor_engine.cpp  overandor_invariants.rs
src/membra/tests/: test_overandor_control_plane.py
tests/: test_econometrics.py  test_gdp_per_capita.py  test_kpi_factory_contracts.py  test_novelty.py  test_research_factory.py  test_wealth_engine.py
tools/: research_infra_pipeline.py
zenodo_submission_dashboard/: Dockerfile  README.md  app.py
(+21 files in other folders)
